# ups_semestralka_server

./: CMakeLists.txt
include/: chesspiece.h  connection.h  game_mngr.h  packet.h  packet_handler.h  packet_in.h  packet_registry.h  packet_validator.h  player_mngr.h  queue_mngr.h  server.h
src/: chesspiece.c  game_mngr.c  main.c  packet.c  packet_handler.c  packet_in.c  packet_registry.c  packet_validator.c  player_mngr.c  queue_mngr.c  server.c
